Ticket #28310: Fixed Javadoc and messages errors.

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -51,7 +51,7 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = Der <i>Kontext 
 com.top_logic.bpe.bpml.display.GuiType = GUI-Typ
 com.top_logic.bpe.bpml.display.GuiType.expr = Ausdruck
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN!
+com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN! Dies ist veraltet.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Definition des Prozessformulars
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Darstellung
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Formular für diesen Prozessschritt. <p> Dieses Formular wird einem Benutzer angezeigt, der als Bearbeiter für diesen Prozessschritt zugewiesen ist. </p> <p> Wenn hier nichts konfiguriert ist, wird das Standardformular des Prozessmodelltyps in diesem Schritt angezeigt. Durch Setzen dieser Eigenschaft können Sie entweder ein vollständig benutzerdefiniertes Formular definieren oder das Standardformular bzw. das Formular eines anderen Prozessschritts anpassen. </p>
@@ -60,7 +60,7 @@ com.top_logic.bpe.bpml.display.RuleType = Regel-Typ
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT = Standard
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = Dies ist die Standardbedingung mit einer Fehlermeldung.
 com.top_logic.bpe.bpml.display.RuleType.HIDDEN = Versteckt
-com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Dies ist eine besondere Bedingung, bei der der {SequenceFlow} ausgeblendet wird.
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Dies ist eine besondere Bedingung, bei der der <i>Sequenzfluss</i> ausgeblendet wird.
 com.top_logic.bpe.bpml.display.RuleType.WARNING = Warnung
 com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = Dies ist eine besondere Bedingung, bei der eine Warnmeldung angezeigt wird, bevor mit dem nächsten Knoten fortgefahren wird.
 com.top_logic.bpe.bpml.display.RuleType.tooltip = Definiert die Arten von Bedingungen, die auf Sequenzflüsse angewendet werden können.
@@ -101,7 +101,7 @@ com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>SequenceFlow Rule Defin
 com.top_logic.bpe.bpml.display.TemplateBuilder = Erbauer von Vorlagen
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Funktion
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN!
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN! Dies ist veraltet.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML-Erweiterung
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Anmerkung für einen <i>Teil eines strukturierten Typs</i>, die ihn als BPML-Erweiterung kennzeichnet (nicht Teil des BPML-Kernmodells).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Unterklassen-Optionen
@@ -124,6 +124,14 @@ com.top_logic.bpe.execution.engine.FormEditAction.manual-task.tooltip = Die <i>m
 com.top_logic.bpe.execution.engine.FormEditActionOp = Formular-Editieraktion
 com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Anwendungsaktion</i> zum Festlegen einer <i>Formulardefinition</i> für eine <i>manuelle Aufgabe</i>.
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export als PDF-Handler
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Erbauer
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur <i>Erstellung</i> einer <i>Prozessinstanzfunktion</i>.
+com.top_logic.bpe.execution.script.ForceTransition$Builder = Erbauer
+com.top_logic.bpe.execution.script.ForceTransition$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Kraftübergangsfunktion</i>.
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder = Erbauer
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i>, der eine Funktion <i>"Erreichbare Ziele erhalten"</i> erstellt.
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder = Erbauer
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Instanzfunktion für einen Übergangsprozess</i>.
 com.top_logic.bpe.layout.execution.ActiveTaskComponent = Komponente für aktive Aufgaben
 com.top_logic.bpe.layout.execution.ActiveTaskComponent.tooltip = <i>Standardkomponente zur Bearbeitung von Objekten</i>, die die konfigurierten Attribute für eine bestimmte <i>Aufgabe</i> anzeigt.
 com.top_logic.bpe.layout.execution.ProcessExecutionComponent = Komponente zur Prozessausführung
