--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -51,7 +51,7 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = The <i>configur
 com.top_logic.bpe.bpml.display.GuiType = Gui type
 com.top_logic.bpe.bpml.display.GuiType.expr = Expression
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE!
+com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE! This is deprecated.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Process form definition
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Display
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Form for this process step. <p> This form is displayed to a user who is assigned as the processor for this process step. </p> <p> If nothing is configured here, the default form of the process model type is displayed in this step. By setting this property, you can either define a fully-customized form or adjust the default form or the form of another process step. </p>
@@ -60,7 +60,7 @@ com.top_logic.bpe.bpml.display.RuleType = Rule type
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT = Default
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = This is the default Condition with an Error Message.
 com.top_logic.bpe.bpml.display.RuleType.HIDDEN = Hidden
-com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = This is a special Condition, where the @Link{SequenceFlow} will be hidden.
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = This is a special Condition, where the <i>sequence flow</i> will be hidden.
 com.top_logic.bpe.bpml.display.RuleType.WARNING = Warning
 com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = This is a special Condition, where a Warning Message pops up before Continuing with the next Node.
 com.top_logic.bpe.bpml.display.RuleType.tooltip = Defines the types of conditions that can be applied to sequence flows.
@@ -101,7 +101,7 @@ com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>SequenceFlow Rule Defin
 com.top_logic.bpe.bpml.display.TemplateBuilder = Template builder
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Function
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE!
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE! This is deprecated.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML extension
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Annotation for a <i>structured type part</i> marking it as a BPML extension (not part of the BPML core model).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Sub class options
@@ -124,6 +124,14 @@ com.top_logic.bpe.execution.engine.FormEditAction.manual-task.tooltip = The <i>m
 com.top_logic.bpe.execution.engine.FormEditActionOp = Form edit action
 com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Application scripting action</i> to set a <i>form definition</i> for a <i>manual task</i>.
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export as pdf handler
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Builder
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>create process instance</i> function.
+com.top_logic.bpe.execution.script.ForceTransition$Builder = Builder
+com.top_logic.bpe.execution.script.ForceTransition$Builder.tooltip = <i>Simple method builder</i> creating an <i>force transition</i> function.
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder = Builder
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder.tooltip = <i>Simple method builder</i> creating an <i>get reachable targets</i> function.
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder = Builder
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>transition process instance</i> function.
 com.top_logic.bpe.layout.execution.ActiveTaskComponent = Active task component
 com.top_logic.bpe.layout.execution.ActiveTaskComponent.tooltip = <i>Default edit object component</i> that displays the configured attributes for a given <i>task</i>.
 com.top_logic.bpe.layout.execution.ProcessExecutionComponent = Process execution component
