Ticket #28310: Added missing messages properties.

--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -45,6 +45,8 @@ model.tl.bpe.bpml.Described = Described
 model.tl.bpe.bpml.Described.description = Beschreibung
 model.tl.bpe.bpml.DisplayDescription = DisplayDescription
 model.tl.bpe.bpml.Edge = Edge
+model.tl.bpe.bpml.Edge.label = Label
+model.tl.bpe.bpml.Edge.label.tooltip = Bezeichnung der Kante, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll (z. B. bei der Entscheidungsfindung oder als Text auf einer Schaltfläche).
 model.tl.bpe.bpml.Edge.process = Prozess
 model.tl.bpe.bpml.Edge.source = Von
 model.tl.bpe.bpml.Edge.target = Nach
@@ -121,6 +123,8 @@ model.tl.bpe.bpml.Participant.exportDescription = Exportbeschreibung
 model.tl.bpe.bpml.Participant.modelType = Modell-Typ
 model.tl.bpe.bpml.Participant.modelType.tooltip = Typ des prozessgesteuerten Objektes (der Prozessdurchführung). Eine Instanz dieses Typs wird beim Starten eines Prozesses angelegt.
 model.tl.bpe.bpml.Participant.process = Prozess
+model.tl.bpe.bpml.Participant.taskLabel = Dynamische Aufgabenbeschreibung
+model.tl.bpe.bpml.Participant.taskLabel.tooltip = Funktion, die den Namen einer Aufgabe in Workflow-Ansichten berechnet, wenn für die Aufgabe selbst kein Name konfiguriert ist.\n\nDie Funktion erhält zwei Argumente, die Prozessausführung und die aktuelle Aufgabe.
 model.tl.bpe.bpml.Participant.taskTitle = Template für Task-Titel
 model.tl.bpe.bpml.Participant.taskTitle.tooltip = Text mit eingebetteten Ausdrücken. Über die Variable $model kann auf die aktuelle Aufgabe zugegriffen werden.
 model.tl.bpe.bpml.Participant.tokenType = Zustandstyp
@@ -162,6 +166,8 @@ model.tl.bpe.bpml.Task = Task
 model.tl.bpe.bpml.Task.boundaryEvents = Boundary Events
 model.tl.bpe.bpml.Task.label = Label
 model.tl.bpe.bpml.Task.label.tooltip = Bezeichnung der Aufgabe, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll (z. B. in einer Überschrift).
+model.tl.bpe.bpml.Task.labelFunction = Label Funktion
+model.tl.bpe.bpml.Task.labelFunction.tooltip = Dynamische Berechnung des Aufgabennamens, wie er einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll. Das Prozessmodell und die aktuelle Aufgabe können in die Berechnung einbezogen werden. Es wird eine Funktion mit drei Argumenten erwartet. Die aktuelle Prozessausführung (Instanz von `tl.bpe.execution:ProcessExecution`) wird als erstes Argument, die aktuell bearbeitete Aufgabe (`tl.bpe.bpml:Task`) als zweites Argument und der aktuelle Prozessschritt (`tl.bpe.execution:Token`) als drittes Argument übergeben.
 model.tl.bpe.bpml.Task.title = Bezeichnung
 model.tl.bpe.bpml.Task.title.tooltip = Bezeichnung der Aufgabe, wie sie einem Nutzer bei der Workflow-Bearbeitung angezeigt werden soll (z.B. in einer Überschrift).
 model.tl.bpe.bpml.Task.titleFunction = Berechnung der Bezeichnung
