--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
@@ -171,6 +171,7 @@ model.tl.bpe.bpml.Task.labelFunction.tooltip = Dynamic calculation of the name o
 model.tl.bpe.bpml.Task.title = Title
 model.tl.bpe.bpml.Task.title.tooltip = Name of the task as it should be displayed to a user during workflow processing (e.g. in a heading).
 model.tl.bpe.bpml.Task.titleFunction = Calculation of the title
+model.tl.bpe.bpml.Task.titleFunction.tooltip = Dynamic calculation of the name of a task as it should be displayed to a user during workflow processing. The process model and the current task can be included in the calculation.\n\nA function with three arguments is expected. The current process execution (instance of `tl.bpe.execution:ProcessExecution`) is passed as the first argument, the currently processed task (`tl.bpe.bpml:Task`) as the second argument and the current process step (`tl.bpe.execution:Token`) as the third argument.
 model.tl.bpe.bpml.Task.tokenType = State type
 model.tl.bpe.bpml.Task.tokenType.tooltip = The type of object that describes the status of a process execution in the current task. \n\nThe history of a process execution is made up of the list of all status objects that were created during the course of the process execution. In each of these objects, at least the duration of the process in this task and the processor of the task are saved. \n\nBy specifying a separate type for the status object, further information can be collected during the course of the process that is not directly linked to the process object itself.
 model.tl.bpe.bpml.TerminateEventDefinition = Terminate
