--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -59,7 +59,7 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = Der <i>Kontext 
 com.top_logic.bpe.bpml.display.GuiType = Gui-Typ
 com.top_logic.bpe.bpml.display.GuiType.expr = Ausdruck
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN.
+com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN. Dies ist veraltet.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Definition des Prozessformulars
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Anzeige
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Formular für diesen Prozessschritt. <p> Dieses Formular wird einem Benutzer angezeigt, der als Bearbeiter für diesen Prozessschritt zugewiesen ist. </p> <p> Wenn hier nichts konfiguriert ist, wird das Standardformular des Prozessmodelltyps in diesem Schritt angezeigt. Durch Setzen dieser Eigenschaft können Sie entweder ein vollständig benutzerdefiniertes Formular definieren oder das Standardformular bzw. das Formular eines anderen Prozessschritts anpassen. </p>
@@ -101,7 +101,7 @@ com.top_logic.bpe.bpml.display.StandardForm.tooltip = <i>Definition des Aufgaben
 com.top_logic.bpe.bpml.display.TemplateBuilder = Erbauer von Vorlagen
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Funktion
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN.
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN! Dies ist veraltet.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML-Erweiterung
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Anmerkung für einen <i>Teil eines strukturierten Typs</i>, die ihn als BPML-Erweiterung kennzeichnet (nicht Teil des BPML-Kernmodells).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Unterklassen-Optionen
