--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -59,7 +59,7 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = The <i>configur
 com.top_logic.bpe.bpml.display.GuiType = Gui type
 com.top_logic.bpe.bpml.display.GuiType.expr = Expression
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE.
+com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE. This is deprecated.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Process form definition
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Display
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Form for this process step. <p> This form is displayed to a user who is assigned as the processor for this process step. </p> <p> If nothing is configured here, the default form of the process model type is displayed in this step. By setting this property, you can either define a fully-customized form or adjust the default form or the form of another process step. </p>
@@ -101,7 +101,7 @@ com.top_logic.bpe.bpml.display.StandardForm.tooltip = <i>Task form definition</i
 com.top_logic.bpe.bpml.display.TemplateBuilder = Template builder
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Function
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE.
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE! This is deprecated.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML extension
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Annotation for a <i>structured type part</i> marking it as a BPML extension (not part of the BPML core model).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Sub class options
