Ticket #28375: Added migration.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1553,6 +1553,14 @@ com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.source.to
 com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.target = Ziel
 com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.target.tooltip = Qualifizierter Name des Zieltyps.
 com.top_logic.element.model.migration.ChangeAttributeTargetType.tooltip = Der<i>Migrationsprozessor</i> ändert den Zieltyp aller Typenteile.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId = Konkret in Definition ID ändern
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.id-columns = ID-Spalten
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.id-columns.tooltip = Tabellenspalten, die das Objekt identifizieren.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.part-column = Teil Spalte
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.part-column.tooltip = Name der <i>MO-Referenz</i>, in der der <i>strukturierte Typteil</i> gespeichert ist.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.table = Tabelle
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.table.tooltip = Name der Tabelle, die angepasst werden soll.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.tooltip = <i>Migrationsprozessor</i>, der die IDs von <i>strukturierten Typteilen</i> durch die ID ihrer Definition in der Referenztabelle ersetzt.
 com.top_logic.element.model.migration.InlineCompositionLinks = Inline-Zusammensetzung Links
 com.top_logic.element.model.migration.InlineCompositionLinks.Config.container = Container
 com.top_logic.element.model.migration.InlineCompositionLinks.Config.container-order = Container-Bestellung
