--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1553,6 +1553,14 @@ com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.source.to
 com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.target = Target
 com.top_logic.element.model.migration.ChangeAttributeTargetType.Config.target.tooltip = Qualified name of the target type.
 com.top_logic.element.model.migration.ChangeAttributeTargetType.tooltip = <i>Migration processor</i> changing the target type of all type parts.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId = Change concrete to definition ID
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.id-columns = ID columns
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.id-columns.tooltip = Table columns which identify the object.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.part-column = Part column
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.part-column.tooltip = Name of the <i>MO reference</i> that stores the <i>structured type part</i>.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.table = Table
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.Config.table.tooltip = Name of the table to adapt.
+com.top_logic.element.model.migration.ChangeConcreteToDefinitionId.tooltip = <i>Migration processor</i> that replaces the ids of <i>structured type part</i> by the id of their definition in reference table.
 com.top_logic.element.model.migration.InlineCompositionLinks = Inline composition links
 com.top_logic.element.model.migration.InlineCompositionLinks.Config.container = Container
 com.top_logic.element.model.migration.InlineCompositionLinks.Config.container-order = Container order
