Ticket #28375: Store complete StructuredText in application action.

--- a/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_de.properties
@@ -60,6 +60,8 @@ com.top_logic.layout.wysiwyg.ui.scripting.ImageUploadAction.image = Bild
 com.top_logic.layout.wysiwyg.ui.scripting.ImageUploadAction.image.tooltip = Die <i>binären Daten</i>, die hochgeladen werden sollen.
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name = Name
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name.tooltip = <i>Modellname</i> des <i>Benennungsschemas für strukturierten Text</i>.
+com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.text = Text
+com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.text.tooltip = Der dargestellte <i>strukturierte Text</i>.
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.value = Wert
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.value.tooltip = Der wörtliche Wert.
 com.top_logic.layout.wysiwyg.ui.tlscript.I18NInternationalize$Builder = Bauherr
