--- a/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_en.properties
@@ -60,6 +60,8 @@ com.top_logic.layout.wysiwyg.ui.scripting.ImageUploadAction.image = Image
 com.top_logic.layout.wysiwyg.ui.scripting.ImageUploadAction.image.tooltip = The <i>binary data</i> that should be uploaded.
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name = Name
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name.tooltip = <i>Model name</i> of <i>structured text naming scheme</i>.
+com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.text = Text
+com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.text.tooltip = The represented <i>structured text</i>.
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.value = Value
 com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme.Name.value.tooltip = The literal value.
 com.top_logic.layout.wysiwyg.ui.tlscript.I18NInternationalize$Builder = Builder
