--- a/com.top_logic.layout.wysiwyg/src/main/webapp/WEB-INF/conf/resources/layoutWysiwygMessages_en.properties
+++ b/com.top_logic.layout.wysiwyg/src/main/webapp/WEB-INF/conf/resources/layoutWysiwygMessages_en.properties
@@ -20,4 +20,4 @@ com.top_logic.layout.wysiwyg.ui.formeditor.implementation.StaticHTML.wholeLine =
 com.top_logic.layout.wysiwyg.ui.scripting.I18NStructuredTextNamingScheme$Name = "{foreach(translations, "; ")}"
 com.top_logic.layout.wysiwyg.ui.scripting.I18NStructuredTextNamingScheme$Translation = {language}: {value}
 com.top_logic.layout.wysiwyg.ui.scripting.ImageUploadAction$Op = Insert {image} into {field}.
-com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name = "{value}"
+com.top_logic.layout.wysiwyg.ui.scripting.StructuredTextNamingScheme$Name = "{text}"
