Ticket #28532: function to check if a value is compatible with target

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -512,6 +512,8 @@ com.top_logic.model.search.expr.config.operations.IntersectionBuilder = Schnittp
 com.top_logic.model.search.expr.config.operations.IntersectionBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Schnittmengenausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.IsCompatible$Builder = Builder
 com.top_logic.model.search.expr.config.operations.IsCompatible$Builder.tooltip = <i>Builder</i> für <i>isCompatible</i>.
+com.top_logic.model.search.expr.config.operations.IsCompatibleValue$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.IsCompatibleValue$Builder.tooltip = <i>Methode Erbauer</i> erstellen <i>ist kompatibel Wert</i>.
 com.top_logic.model.search.expr.config.operations.IsDateEqualBuilder = Ist Datum gleich Baumeister
 com.top_logic.model.search.expr.config.operations.IsDateEqualBuilder.tooltip = <i>Methodenersteller</i>, der einen <i>Suchausdruck</i> zum Vergleich von <i>Datumswerten</i> erstellt.
 com.top_logic.model.search.expr.config.operations.IsDateGreaterBuilder = Ist Datum größer Baumeister
