--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
@@ -151,6 +151,7 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_EXPE
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_LITERAL_ARGUMENT__EXPR = A literal is expected in: {0}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_MUST_BE_INVOKED_WITHOUT_TARGET__EXPR = The expression must only have arguments, no target: {0}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_NO_ARGUMENTS_EXPECTED__EXPR = No arguments expected in: {0}
+class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_WRONG_TARGET__ISCOMPATIBLEVALUE = A class, attribute, or primitive type literal is expected as target in: {0}
 class.com.top_logic.model.search.expr.config.operations.arithmetic.I18NConstants.ERROR_FAILED_TO_GENERATE_ID__EXPR_MSG = An error occurred during ID generation ({0}): {1}
 class.com.top_logic.model.search.expr.config.operations.arithmetic.I18NConstants.ERROR_NO_TRANSACTION__EXPR = An ID can only be generated within a transaction ({0}).
 class.com.top_logic.model.search.expr.config.operations.cache.I18NConstants.ERROR_MULTIPLE_VALUES_WITH_SAME_KEY__KEY_V1_V2_EXPR = There are several values with the same key "{0}" (e.g. {1} and {2}) in {3}.
