Ticket #28550: Make the tl.core:Name type trim values.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.core.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.core.messages_de.properties
@@ -16,6 +16,7 @@ model.tl.core.Integer = Integer
 model.tl.core.Key = Schlüssel
 model.tl.core.Long = Long
 model.tl.core.Name = Name
+model.tl.core.Name.tooltip = Typ für ein Namens-Attribut, der sicherstellt, dass keine führenden oder abschließende Leerzeichen eingegeben werden können. Der Typ ist ansonsten äquivalent zu dem Typ "String".
 model.tl.core.Password = Password
 model.tl.core.Revision = Revision
 model.tl.core.Revision.author = Author
