--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.core.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.core.messages_en.properties
@@ -16,6 +16,7 @@ model.tl.core.Integer = Integer
 model.tl.core.Key = Key
 model.tl.core.Long = Long
 model.tl.core.Name = Name
+model.tl.core.Name.tooltip = Type for a name attribute that ensures that no leading or trailing space can be entered. The type is otherwise equivalent to the "String" type.
 model.tl.core.Password = Password
 model.tl.core.Revision = Revision
 model.tl.core.Revision.author = Author
