--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1125,6 +1125,10 @@ com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditCon
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.base-model.tooltip = Das persistente Objekt, in dem der Wert <i>des Konfigurationsitems</i> gespeichert ist.
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.value = Wert
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.value.tooltip = Das eigentliche <i>Konfigurationsobjekt</i>, das gerade bearbeitet wird.
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider = Erzeugung von String-Feldern
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim = Trimmen
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim.tooltip = Ob Strings getrimmt werden sollen (automatische Entfernung von Leerzeichen vor und am Ende von Werten).
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.tooltip = <i>Feldberechnung</i> für <i>strukturierte Typteile</i> vom Typ <i>String</i>.
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider = Tabelle zur Unterstützung komplexer Feldanbieter
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table = Tabelle auswählen
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table.tooltip = Definition der Tabelle für das erstellte Auswahlfeld.
