--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1125,6 +1125,10 @@ com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditCon
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.base-model.tooltip = The persistent object, in which the <i>configuration item</i> value is stored.
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.value = Value
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.EditContext.value.tooltip = The actual <i>configuration item</i> being edited.
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider = String field provider
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim = Trim
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim.tooltip = Whether to trim strings (automatically remove whitespace in front and at the end of values).
+com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.tooltip = <i>Field provider</i> for <i>structured type parts</i> of type <i>string</i>.
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider = Table supporting complex field provider
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table = Select table
 com.top_logic.element.meta.form.fieldprovider.TableSupportingComplexFieldProvider.Config.select-table.tooltip = Definition of the table for the created select field.
