--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -1,21 +1,22 @@
 class.com.top_logic.service.openapi.server.I18NConstants.CLASHING_PATH_PARAMETERS__PATH1__PATH2__UNIFIED_COMPLETE_PATH = The pathes ''{0}'' and ''{1}'' lead to the same result considering the path parameters: {2}
 class.com.top_logic.service.openapi.server.I18NConstants.CREATING_AUTHENTICATOR_FAILED__PATH__METHOD = No authentication algorithm for {1}:{0} could be created.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Invalid server response when validating token: {0}
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_INVALID_API_KEY__PARAMETER = Invalid API key found in parameter ''{0}''.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = No cookie with name ''{0}'' found.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = No header with name ''{0}'' found.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = No query parameter with name ''{0}'' found.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_TOKEN = Unable to get token.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token declined: {0} {1}: {2}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_EXPIRED__DATE = Authentication token is expired at {0}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_INACTIVE = Token inactive.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Missing authentication secret.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Multiple Client Credential configurations for domain {0}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Multiple user authentication for different users: {0} vs. {1}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.NO_SUCH_ACCOUNT__USER = No account for user ''{0}'' found.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_INVALID_API_KEY__PARAMETER = Invalid API key found in parameter ''{0}''.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = No cookie with name ''{0}'' found.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = No header with name ''{0}'' found.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = No query parameter with name ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Missing authentication data.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Not a BasicAuth authentication.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Wrong credentials for user "{0}".
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Invalid server response when validating token: {0}
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_NO_TOKEN = Unable to get token.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token declined: {0} {1}: {2}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_EXPIRED__DATE = Authentication token is expired at {0}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_INACTIVE = Token inactive.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_AUTH_FAILED__REASONS = Multiple authentication attempts failed: {0}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Missing authentication secret.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Multiple user authentication for different users: {0} vs. {1}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.NO_SUCH_ACCOUNT__USER = No account for user ''{0}'' found.
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Multiple Client Credential configurations for domain {0}.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = No username available for token.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = The request parameter {0} is not allowed for the selected method {1}.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = It is not allowed to define parameter with same name and location both in the API and in the operation: {0}
@@ -57,14 +58,28 @@ com.top_logic.service.openapi.server.OpenApiServer.Config.tags.tooltip = A list 
 com.top_logic.service.openapi.server.OpenApiServer.OpenAPIServerPart.server-configuration = Server configuration
 com.top_logic.service.openapi.server.OpenApiServer.OpenAPIServerPart.server-configuration.tooltip = The server configuration containing this configuration object.
 com.top_logic.service.openapi.server.OpenApiServer.tooltip = Service providing a configurable REST service.
-com.top_logic.service.openapi.server.authentication.ServerSecret.owner = Owner
-com.top_logic.service.openapi.server.authentication.ServerSecret.owner.tooltip = The <i>OpenAPI</i> server configuration to which this <i>server secret</i> belongs.
+com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication = API key
+com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentication configuration</i> to authenticate using an API key.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API key
-com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API key secret</i> for the Open API server.
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API key secret</i> for the <i>OpenAPI</i> server.
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server authentications
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentications
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = All available authentications.
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.tooltip = Configuration plug-in to define <i>server authentications</i>.
+com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner = Owner
+com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner.tooltip = The <i>OpenAPI</i> server configuration to which this <i>server secret</i> belongs.
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication = HTTP authentication (BasicAuth)
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.tooltip = Authentication using HTTP <i>BasicAuth</i> mechanism.
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret = HTTP authentication (BasicAuth)
-com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP secret</i> for the Open API server.
+com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP secret</i> for the <i>OpenAPI</i> server.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret = OpenID authentication
-com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentication data for an Open API server towards the <i>OpenID</i> server.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentication data for an <i>OpenAPI</i> server towards the <i>OpenID</i> server.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials = OpenID authentication
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context = In user context
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context.tooltip = Whether the protected operation must be executed in user context. <p> If this property is set, then it is expected that the sent access token is the personal token of a person which has an account in the application. The operation is then processed as if the user has executed it after a login. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field = Username field
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field.tooltip = Name of the field in the token introspection response which contains the user. <p> When no field is configured the default field "username" is used to find the user name. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.tooltip = <i>Token based authentication</i> to authenticate by using client credentials or users access token.
 com.top_logic.service.openapi.server.conf.Operation = Operation
 com.top_logic.service.openapi.server.conf.Operation.implementation = Implementation
 com.top_logic.service.openapi.server.conf.Operation.implementation.tooltip = The operation to execute upon request.
