--- a/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_de.properties
@@ -13,12 +13,24 @@ class.com.top_logic.service.openapi.client.registry.impl.call.request.I18NConsta
 class.com.top_logic.service.openapi.client.registry.impl.call.request.I18NConstants.ILLEGAL_CONTENT_TYPE__TYPE_NAME = {0} ist kein legaler Inhaltstyp in Teil {1}.
 class.com.top_logic.service.openapi.client.registry.impl.response.I18NConstants.ERROR_CALL_FAILED_NO_DETAILS = Keine Details verfügbar
 class.com.top_logic.service.openapi.client.registry.impl.response.I18NConstants.ERROR_CALL_FAILED__FUN_ARGS_REASON_CODE_CONTENT = Der Aufruf "{0}" mit den Argumenten {1} ist fehlgeschlagen: {2} (Fehlercode {3}): {4}
+com.top_logic.service.openapi.client.authentication.apikey.APIKeyAuthentication = API-Schlüssel
+com.top_logic.service.openapi.client.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentifizierungskonfiguration</i> zur Authentifizierung mit einem API-Schlüssel.
 com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret = API-Schlüssel
-com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den Open-API-Client.
+com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den <i>OpenAPI-Client</i>.
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications = Client-Authentifizierungen
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.authentications = Authentifizierungen
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.tooltip = Konfigurationen von Client-Authentifizierungen.
+com.top_logic.service.openapi.client.authentication.http.basic.BasicAuthentication = HTTP-Authentifizierung (BasicAuth)
+com.top_logic.service.openapi.client.authentication.http.basic.BasicAuthentication.tooltip = Authentifizierung mit HTTP <i>BasicAuth-Mechanismus</i>.
 com.top_logic.service.openapi.client.authentication.http.basic.ClientBasicAuthSecret = HTTP-Authentifizierung (BasicAuth)
 com.top_logic.service.openapi.client.authentication.http.basic.ClientBasicAuthSecret.tooltip = <i>HTTP-Geheimnis</i> für <i>OpenAPI-Clients</i>.
 com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret = OpenID-Authentifizierung
-com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret.tooltip = Authentifizierungsdaten für einen Open-API-Client gegenüber dem <i>OpenID-Server</i>.
+com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret.tooltip = Authentifizierungsdaten für einen <i>OpenAPI-Client</i> gegenüber dem <i>OpenID-Server</i>.
+com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials = OpenID-Authentifizierung
+com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials.tooltip = <i>Tokenbasierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldedaten.
+com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication = Mit Benutzerauthentifizierung
+com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication.tooltip = Verwendet zur Autorisierung das persönliche Token des aktuell über OIDC angemeldeten Benutzers.
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient = Offenen API-Client importieren
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Befehlshandler</i>, der einen <i>OpenAPI-Client</i> importiert.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry = TL-Script-Funktionen für externe APIs
@@ -26,7 +38,7 @@ com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.authe
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions = Funktionsdefinitionen
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions.tooltip = Definitionen für benutzerdefinierte TL-Script-Funktionen, die externe APIs aufrufen.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets = Geheimnisse
-com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets.tooltip = Konfiguration der Geheimnisse, die zur Übermittlung an den Open-API-Server verwendet werden können.
+com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets.tooltip = Konfiguration der Geheimnisse, die zur Übermittlung an den <i>OpenAPI-Server</i> verwendet werden können.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.ServiceRegistryPart.service-registry = Dienstleistungsverzeichnis
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.ServiceRegistryPart.service-registry.tooltip = Konfiguration der <i>TL-Script-Funktionen für externe APIs</i>, von denen diese ein Teil sind.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.tooltip = Dienst zur Konfiguration von Client-Endpunkten für externe APIs, die über TL-Script-Funktionen aufgerufen werden können.
@@ -34,7 +46,7 @@ com.top_logic.service.openapi.client.registry.conf.InParameterContext.context = 
 com.top_logic.service.openapi.client.registry.conf.InParameterContext.context.tooltip = Der Kontext dieser Wertedefinition, um Zugang zu den aktuell definierten Parameternamen zu erhalten.
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition = Funktionsdefinition
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication = Authentifizierung
-com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication.tooltip = Name der <i>Authentifizierungskonfigurationen</i>, die für den Zugriff auf den Open-API-Server verwendet werden.
+com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication.tooltip = Name der <i>Authentifizierungskonfigurationen</i>, die für den Zugriff auf den <i>OpenAPI-Server</i> verwendet werden.
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.base-url = Basis-URL
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.base-url.tooltip = Vorlage für die URL zum Aufrufen der externen API. <p> Die Vorlage kann Platzhalter enthalten (<i>{param}</i>) mit Verweisen auf <i>Funktionsparameter</i> enthalten, die beim Aufruf der API ersetzt werden, um Argumente an die aufgerufene API zu übermitteln. </p>
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.call-builders = Aufbau der Abfrage
