--- a/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_en.properties
@@ -13,12 +13,24 @@ class.com.top_logic.service.openapi.client.registry.impl.call.request.I18NConsta
 class.com.top_logic.service.openapi.client.registry.impl.call.request.I18NConstants.ILLEGAL_CONTENT_TYPE__TYPE_NAME = {0} is not a legal content type in part {1}.
 class.com.top_logic.service.openapi.client.registry.impl.response.I18NConstants.ERROR_CALL_FAILED_NO_DETAILS = No details available
 class.com.top_logic.service.openapi.client.registry.impl.response.I18NConstants.ERROR_CALL_FAILED__FUN_ARGS_REASON_CODE_CONTENT = The call "{0}" with the arguments {1} failed: {2} (error code {3}): {4}
+com.top_logic.service.openapi.client.authentication.apikey.APIKeyAuthentication = API key
+com.top_logic.service.openapi.client.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentication configuration</i> to authenticate using an API key.
 com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret = API key
-com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret.tooltip = <i>API key secret</i> for the Open API client.
+com.top_logic.service.openapi.client.authentication.apikey.ClientAPIKeySecret.tooltip = <i>API key secret</i> for the <i>OpenAPI</i> client.
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications = Client authentications
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.authentications = Authentications
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.authentications.tooltip = All available authentications.
+com.top_logic.service.openapi.client.authentication.config.ClientAuthentications.tooltip = Configurations of client authentications.
+com.top_logic.service.openapi.client.authentication.http.basic.BasicAuthentication = HTTP authentication (BasicAuth)
+com.top_logic.service.openapi.client.authentication.http.basic.BasicAuthentication.tooltip = Authentication using HTTP <i>BasicAuth</i> mechanism.
 com.top_logic.service.openapi.client.authentication.http.basic.ClientBasicAuthSecret = HTTP authentication (BasicAuth)
 com.top_logic.service.openapi.client.authentication.http.basic.ClientBasicAuthSecret.tooltip = <i>HTTP secret</i> for <i>OpenAPI</i> clients.
 com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret = OpenID authentication
-com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret.tooltip = Authentication data for an Open API client towards the <i>OpenID</i> server.
+com.top_logic.service.openapi.client.authentication.oauth.ClientCredentialSecret.tooltip = Authentication data for an <i>OpenAPI</i> client towards the <i>OpenID</i> server.
+com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials = OpenID authentication
+com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials.tooltip = <i>Token based authentication</i> to authenticate using client credentials.
+com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication = With user authentication
+com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication.tooltip = Uses the personal access token of the user currently logged in via OIDC for authorization.
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient = Import open API client
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Command handler</i> importing an <i>OpenAPI</i> client.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry = TL-Script functions for external APIs
@@ -26,7 +38,7 @@ com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.authe
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions = Method definitions
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions.tooltip = Definitions for user-defined TL-Script functions invoking external APIs.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets = Secrets
-com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets.tooltip = Configuration of the secrets that can be used to deliver to the Open API server.
+com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.secrets.tooltip = Configuration of the secrets that can be used to deliver to the <i>OpenAPI</i> server.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.ServiceRegistryPart.service-registry = Service registry
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.ServiceRegistryPart.service-registry.tooltip = Configuration of the <i>TL-Script functions for external APIs</i> this is a part from.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.tooltip = Service allowing to configure client end-points for external APIs that can be called through TL-Script functions.
@@ -34,7 +46,7 @@ com.top_logic.service.openapi.client.registry.conf.InParameterContext.context = 
 com.top_logic.service.openapi.client.registry.conf.InParameterContext.context.tooltip = The context of this value definition to get access to currently defined parameter names.
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition = Method definition
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication = Authentication
-com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication.tooltip = Name of the <i>authentication configurations</i> that are used to access the Open API server.
+com.top_logic.service.openapi.client.registry.conf.MethodDefinition.authentication.tooltip = Name of the <i>authentication configurations</i> that are used to access the <i>OpenAPI</i> server.
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.base-url = Base URL
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.base-url.tooltip = Template for the URL for invoking the external API. <p> The template may contain placeholders (<i>{param}</i>) with references to <i>function parameters</i> that are replaced upon API invocation to transmit arguments to the called API. </p>
 com.top_logic.service.openapi.client.registry.conf.MethodDefinition.call-builders = Call builders
