--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
@@ -25,22 +25,12 @@ com.top_logic.service.openapi.common.authentication.AuthenticationConfig.domain 
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.domain.tooltip = Definition der Domäne, für die diese <i>Authentifizierungskonfiguration</i> verwendet werden kann.
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.separate-secret-needed = Separates Geheimnis erforderlich
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.separate-secret-needed.tooltip = Ob für diese Art der Authentifizierung ein gesondertes Geheimnis notwendig ist.
-com.top_logic.service.openapi.common.authentication.ClientAuthentications = Client-Authentifizierungen
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.authentications = Authentifizierungen
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.tooltip = Konfigurationen von Client-Authentifizierungen.
 com.top_logic.service.openapi.common.authentication.SecretConfiguration.domain = Bereich
 com.top_logic.service.openapi.common.authentication.SecretConfiguration.domain.tooltip = Der Bereich des Geheimnisses.
-com.top_logic.service.openapi.common.authentication.ServerAuthentications = Server-Authentifizierungen
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.authentications = Authentifizierungen
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.tooltip = Konfigurationen von Server-Authentifizierungen.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication = API-Schlüssel
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.parameter-name = Name des Parameters
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.parameter-name.tooltip = Name des Parameters, der den API-Schlüssel enthält.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.position = Position
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.position.tooltip = Die Stelle, an der sich der API-Schlüssel in der Anfrage befindet.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentifizierungskonfiguration</i> zur Authentifizierung mit einem API-Schlüssel.
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.parameter-name = Name des Parameters
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.parameter-name.tooltip = Name des Parameters, der den API-Schlüssel enthält.
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.position = Position
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.position.tooltip = Die Stelle, an der sich der API-Schlüssel in der Anfrage befindet.
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition = API-Schlüsselposition
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition.COOKIE = Cookie
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition.COOKIE.tooltip = Der API-Schlüssel ist in einem Cookie enthalten.
@@ -65,10 +55,6 @@ com.top_logic.service.openapi.common.authentication.http.LoginCredentials.passwo
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.tooltip = Anmeldedaten für einen Benutzer mit einem bestimmten Passwort.
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.user = Benutzer
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.user.tooltip = Name des zu authentifizierenden Benutzers.
-com.top_logic.service.openapi.common.authentication.http.basic.BasicAuthentication = HTTP-Authentifizierung (BasicAuth)
-com.top_logic.service.openapi.common.authentication.http.basic.BasicAuthentication.tooltip = Authentifizierung mit HTTP <i>BasicAuth-Mechanismus</i>.
-com.top_logic.service.openapi.common.authentication.oauth.ClientCredentials = OpenID-Authentifizierung
-com.top_logic.service.openapi.common.authentication.oauth.ClientCredentials.tooltip = <i>Token basierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldedaten.
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret = Geheimnis des Kunden
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret.client-id = Client-ID
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret.client-id.tooltip = Kennung dieses Clients, die dem Token- oder Authentifizierungsserver bekannt ist.
@@ -89,12 +75,6 @@ com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider = Op
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.Config.open-id-issuer = OpenID-URL
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.Config.open-id-issuer.tooltip = Die URL des Ausstellers für die <i>OpenID-Metadaten</i>. <p> Die Metadaten werden per HTTP GET von <i>[issuer-url]/.well-known/openid-configuration</i> heruntergeladen. </p>
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.tooltip = <i>Token-URI-Anbieter</i>, der Informationen von einem <i>OpenID-Server</i> abruft.
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials = OpenID-Authentifizierung
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context = Im Benutzerkontext
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context.tooltip = Ob der geschützte Vorgang im Benutzerkontext ausgeführt werden muss. <p> Wenn diese Eigenschaft gesetzt ist, wird erwartet, dass das gesendete Zugriffstoken das persönliche Token einer Person ist, die einen Zugang zu der Anwendung hat. Der Vorgang wird dann so verarbeitet, als ob der Benutzer ihn nach einer Anmeldung ausgeführt hätte. </p>
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.tooltip = <i>Token-basierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldeinformationen oder Benutzer-Zugangs-Token.
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field = Benutzernamensfeld
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field.tooltip = Name des Feldes in der Token-Introspection-Antwort, das den Benutzer enthält. <p> Wenn kein Feld konfiguriert ist, wird das Standardfeld "username" verwendet, um den Benutzernamen zu finden. </p>
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication = Token based Authentifizierung
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.tooltip = <i>OAuth-Authentifizierung</i>, die die in der Anfrage gesendeten Sperren überprüft.
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.uri-provider = URI-Anbieter
@@ -107,8 +87,6 @@ com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.tooltip = Konfiguration einer Token-URL. Dies geschieht entweder durch direkte Konfiguration der Token URL oder durch Angabe des Issuers eines Open-ID Servers.
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.use-open-id-server = Open-ID Server verwenden
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.use-open-id-server.tooltip = Ob ein Open-ID-Provider verwendet wird, um die <i>Token-URL</i> zu ermitteln.
-com.top_logic.service.openapi.common.authentication.oauth.WithUserAuthentication = Mit Benutzerauthentifizierung
-com.top_logic.service.openapi.common.authentication.oauth.WithUserAuthentication.tooltip = Verwendet zur Autorisierung das persönliche Token des aktuell über OIDC angemeldeten Benutzers.
 com.top_logic.service.openapi.common.conf.HttpMethod = HTTP-Methode
 com.top_logic.service.openapi.common.conf.HttpMethod.DELETE = DELETE
 com.top_logic.service.openapi.common.conf.HttpMethod.DELETE.tooltip = Die Methode <code>DELETE</code> fordert den Ursprungsserver auf, die durch die Request-URI identifizierte Ressource zu löschen. Diese Methode KANN durch menschliches Eingreifen (oder andere Mittel) auf dem Herkunftsserver außer Kraft gesetzt werden. Dem Client kann nicht garantiert werden, dass der Vorgang ausgeführt wurde, selbst wenn der vom Ursprungsserver zurückgegebene Statuscode anzeigt, dass die Aktion erfolgreich abgeschlossen wurde. Der Server SOLLTE jedoch NICHT den Erfolg anzeigen, es sei denn, er beabsichtigt zum Zeitpunkt der Antwort, die Ressource zu löschen oder sie an einen unzugänglichen Ort zu verschieben.
