--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
@@ -25,22 +25,12 @@ com.top_logic.service.openapi.common.authentication.AuthenticationConfig.domain 
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.domain.tooltip = Definition of the domain for which this <i>authentication configuration</i> can be used.
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.separate-secret-needed = Separate secret needed
 com.top_logic.service.openapi.common.authentication.AuthenticationConfig.separate-secret-needed.tooltip = Whether for this kind of authorization a separate secret is necessary.
-com.top_logic.service.openapi.common.authentication.ClientAuthentications = Client authentications
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.authentications = Authentications
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.authentications.tooltip = All available authentications.
-com.top_logic.service.openapi.common.authentication.ClientAuthentications.tooltip = Configurations of client authentications.
 com.top_logic.service.openapi.common.authentication.SecretConfiguration.domain = Domain
 com.top_logic.service.openapi.common.authentication.SecretConfiguration.domain.tooltip = The domain of the secret.
-com.top_logic.service.openapi.common.authentication.ServerAuthentications = Server authentications
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.authentications = Authentications
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.authentications.tooltip = All available authentications.
-com.top_logic.service.openapi.common.authentication.ServerAuthentications.tooltip = Configurations of server authentications.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication = API key
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.parameter-name = Parameter name
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.parameter-name.tooltip = Name of the parameter holding the API key.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.position = Position
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.position.tooltip = The position where the API key is found in the request.
-com.top_logic.service.openapi.common.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentication configuration</i> to authenticate using an API key.
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.parameter-name = Parameter name
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.parameter-name.tooltip = Name of the parameter holding the API key.
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.position = Position
+com.top_logic.service.openapi.common.authentication.apikey.APIKeyConfig.position.tooltip = The position where the API key is found in the request.
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition = API key position
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition.COOKIE = Cookie
 com.top_logic.service.openapi.common.authentication.apikey.APIKeyPosition.COOKIE.tooltip = The API key is contained in a cookie.
@@ -65,10 +55,6 @@ com.top_logic.service.openapi.common.authentication.http.LoginCredentials.passwo
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.tooltip = Login data for a user by a given password.
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.user = User
 com.top_logic.service.openapi.common.authentication.http.LoginCredentials.user.tooltip = Name of the user to authenticate.
-com.top_logic.service.openapi.common.authentication.http.basic.BasicAuthentication = HTTP authentication (BasicAuth)
-com.top_logic.service.openapi.common.authentication.http.basic.BasicAuthentication.tooltip = Authentication using HTTP <i>BasicAuth</i> mechanism.
-com.top_logic.service.openapi.common.authentication.oauth.ClientCredentials = OpenID authentication
-com.top_logic.service.openapi.common.authentication.oauth.ClientCredentials.tooltip = <i>Token based authentication</i> to authenticate using client credentials.
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret = Client secret
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret.client-id = Client ID
 com.top_logic.service.openapi.common.authentication.oauth.ClientSecret.client-id.tooltip = Id of this client known by the token or authentication server.
@@ -89,12 +75,6 @@ com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider = Op
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.Config.open-id-issuer = OpenID URL
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.Config.open-id-issuer.tooltip = The URL of the issuer for the <i>OpenID</i> meta data. <p> The metadata is downloaded by HTTP GET from <i>[issuer-url]/.well-known/openid-configuration</i>. </p>
 com.top_logic.service.openapi.common.authentication.oauth.OpenIDURIProvider.tooltip = <i>Token URI provider</i> retrieving informations from an <i>OpenID</i> server.
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials = OpenID authentication
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context = In user context
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context.tooltip = Whether the protected operation must be executed in user context. <p> If this property is set, then it is expected that the sent access token is the personal token of a person which has an account in the application. The operation is then processed as if the user has executed it after a login. </p>
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.tooltip = <i>Token based authentication</i> to authenticate by using client credentials or users access token.
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field = Username field
-com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field.tooltip = Name of the field in the token introspection response which contains the user. <p> When no field is configured the default field "username" is used to find the user name. </p>
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication = Token based authentication
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.tooltip = <i>OAuth authentication</i> that checks the tokens that are sent in the request.
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.uri-provider = URI provider
@@ -107,8 +87,6 @@ com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.tooltip = Configuration of an token URL. This is made either by configuring the token URL direct or by giving the Issuer of an Open-ID server.
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.use-open-id-server = Use open ID server
 com.top_logic.service.openapi.common.authentication.oauth.TokenURLConfiguration.use-open-id-server.tooltip = Whether an Open-ID provider is used to determine the token <i>URL</i>.
-com.top_logic.service.openapi.common.authentication.oauth.WithUserAuthentication = With user authentication
-com.top_logic.service.openapi.common.authentication.oauth.WithUserAuthentication.tooltip = Uses the personal access token of the user currently logged in via OIDC for authorization.
 com.top_logic.service.openapi.common.conf.HttpMethod = HTTP method
 com.top_logic.service.openapi.common.conf.HttpMethod.DELETE = Delete
 com.top_logic.service.openapi.common.conf.HttpMethod.DELETE.tooltip = The <code>DELETE</code> method requests that the origin server delete the resource identified by the Request-URI. This method MAY be overridden by human intervention (or other means) on the origin server. The client cannot be guaranteed that the operation has been carried out, even if the status code returned from the origin server indicates that the action has been completed successfully. However, the server SHOULD NOT indicate success unless, at the time the response is given, it intends to delete the resource or move it to an inaccessible location.
