--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -1,21 +1,22 @@
 class.com.top_logic.service.openapi.server.I18NConstants.CLASHING_PATH_PARAMETERS__PATH1__PATH2__UNIFIED_COMPLETE_PATH = Die Pfade ''{0}'' und ''{1}'' führen unter Berücksichtigung der Pfadparameter zu dem selben Ergebnis: {2}
 class.com.top_logic.service.openapi.server.I18NConstants.CREATING_AUTHENTICATOR_FAILED__PATH__METHOD = Es konnte kein Authentifizierungsalgorithmus für {1}:{0} erstellt werden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Ungültige Server Antwort bei der Überprüfung des Tokens: {0}
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_INVALID_API_KEY__PARAMETER = Ungültiger API Schlüssel in Parameter ''{0}'' gefunden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = Kein Cookie mit Namen ''{0}'' gefunden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = Kein Header mit Namen ''{0}'' gefunden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = Kein Abfrageparameter mit Namen ''{0}'' gefunden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_NO_TOKEN = Token kann nicht abgerufen werden.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token abgelehnt: {0} {1}: {2}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_EXPIRED__DATE = Das Authentifizierungstoken ist abgelaufen seit {0}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.AUTH_FAILED_TOKEN_INACTIVE = Token inaktiv.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Fehlendes Authentifizierungsgeheimnis.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Mehrere Client Credential Konfigurationen für Bereich {0}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Mehrfache Benutzerauthentifizierung für verschiedene Benutzer: {0} vs. {1}.
-class.com.top_logic.service.openapi.server.authentication.I18NConstants.NO_SUCH_ACCOUNT__USER = Kein Zugang für Benutzer ''{0}'' gefunden.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_INVALID_API_KEY__PARAMETER = Ungültiger API-Schlüssel im Parameter '{0}' gefunden.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = Kein Cookie mit dem Namen '{0}' gefunden.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = Keine Kopfzeile mit dem Namen '{0}' gefunden.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = Kein Abfrageparameter mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Fehlende Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Keine BasicAuth Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Falsche Authentifizierung für Nutzer "{0}".
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Ungültige Serverantwort bei der Validierung des Tokens: {0}
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_NO_TOKEN = Token kann nicht abgerufen werden.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token abgelehnt: {0} {1}: {2}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_EXPIRED__DATE = Das Token für die Authentifizierung ist bei {0} abgelaufen.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_INACTIVE = Token inaktiv.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_AUTH_FAILED__REASONS = Mehrere Authentifizierungsversuche sind fehlgeschlagen: {0}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Fehlendes Geheimnis für die Authentifizierung.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Uneindeutige Benutzerauthentifizierung für verschiedene Benutzer: {0} vs. {1}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.NO_SUCH_ACCOUNT__USER = Kein Konto für Benutzer '{0}' gefunden.
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Mehrere Client Credential-Konfigurationen für Domäne {0}.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = Kein Benutzername für das Token verfügbar.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = Der Anfrageparameter {0} ist bei der ausgewählten Methode {1} nicht erlaubt.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = Es dürfen keine Parameter mit dem selben Namen und dem selben Auftrittsort sowohl an der API und der Operation definiert werden: {0}
@@ -57,14 +58,28 @@ com.top_logic.service.openapi.server.OpenApiServer.Config.tags.tooltip = Eine Li
 com.top_logic.service.openapi.server.OpenApiServer.OpenAPIServerPart.server-configuration = Server-Konfiguration
 com.top_logic.service.openapi.server.OpenApiServer.OpenAPIServerPart.server-configuration.tooltip = Die Serverkonfiguration, die dieses Konfigurationsobjekt enthält.
 com.top_logic.service.openapi.server.OpenApiServer.tooltip = Dienst, der einen konfigurierbaren REST-Dienst bereitstellt.
-com.top_logic.service.openapi.server.authentication.ServerSecret.owner = Eigentümer
-com.top_logic.service.openapi.server.authentication.ServerSecret.owner.tooltip = Die <i>OpenAPI-Serverkonfiguration</i>, zu der dieses <i>Servergeheimnis</i> gehört.
+com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication = API-Schlüssel
+com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentifizierungskonfiguration</i> zur Authentifizierung mit einem API-Schlüssel.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API-Schlüssel
-com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den Open-API-Server.
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den <i>OpenAPI-Server</i>.
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server-Authentifizierungen
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentifizierungen
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
+com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.tooltip = Konfigurations-Plugin zur Definition von <i>Server-Authentifizierungen</i>.
+com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner = Eigentümer
+com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner.tooltip = Die <i>OpenAPI-Serverkonfiguration</i>, zu der dieses <i>Servergeheimnis</i> gehört.
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication = HTTP-Authentifizierung (BasicAuth)
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.tooltip = Authentifizierung mit HTTP <i>BasicAuth-Mechanismus</i>.
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret = HTTP-Authentifizierung (BasicAuth)
-com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP-Geheimnis</i> für den Open-API-Server.
+com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP-Geheimnis</i> für den <i>OpenAPI-Server</i>.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret = OpenID-Authentifizierung
-com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentifizierungsdaten für einen Open-API-Server gegenüber dem <i>OpenID-Server</i>.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentifizierungsdaten für einen <i>OpenAPI-Server</i> gegenüber dem <i>OpenID-Server</i>.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials = OpenID-Authentifizierung
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context = Im Benutzerkontext
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context.tooltip = Ob die Anfragebearbeitung im Benutzerkontext ausgeführt werden soll. <p> Wenn diese Eigenschaft gesetzt ist, wird erwartet, dass das gesendete Zugriffstoken das persönliche Token einer Person ist, die ein Konto in der Anwendung hat. Der Vorgang wird dann so verarbeitet, als ob der Benutzer ihn nach einer Anmeldung ausgeführt hätte. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field = Feld für Benutzernamen
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field.tooltip = Name des Feldes in der Token-Introspektionsantwort, das den Benutzer enthält. <p> Wenn kein Feld konfiguriert ist, wird das Standardfeld "username" verwendet, um den Benutzernamen zu finden. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.tooltip = <i>Token-basierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldeinformationen oder Benutzer-Zugangs-Token.
 com.top_logic.service.openapi.server.conf.Operation = Operation
 com.top_logic.service.openapi.server.conf.Operation.implementation = Umsetzung
 com.top_logic.service.openapi.server.conf.Operation.implementation.tooltip = Die Operation, die auf Anforderung ausgeführt werden soll.
