--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -69,6 +69,8 @@ com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.t
 com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner = Eigentümer
 com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner.tooltip = Die <i>OpenAPI-Serverkonfiguration</i>, zu der dieses <i>Servergeheimnis</i> gehört.
 com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication = HTTP-Authentifizierung (BasicAuth)
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.Config.in-user-context = Im Benutzerkontext
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.Config.in-user-context.tooltip = Ob Benutzer die API mit ihren Anmeldedaten (Benutzername und Kennwort) verwenden können. <p> Wenn diese Option aktiviert ist, müssen für diese Authentifizierungsmethode keine zusätzlichen Geheimnisse konfiguriert werden, da die Authentifizierung anhand der lokalen Kennwortdatenbank erfolgt. </p> <p> Wenn diese Option aktiviert ist, hat die API-Implementierung über die Funktion <code>currentUser()</code> Zugriff auf den authentifizierten Benutzer. </p>
 com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.tooltip = Authentifizierung mit HTTP <i>BasicAuth-Mechanismus</i>.
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret = HTTP-Authentifizierung (BasicAuth)
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP-Geheimnis</i> für den <i>OpenAPI-Server</i>.
