--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -69,6 +69,8 @@ com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.t
 com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner = Owner
 com.top_logic.service.openapi.server.authentication.conf.ServerSecret.owner.tooltip = The <i>OpenAPI</i> server configuration to which this <i>server secret</i> belongs.
 com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication = HTTP authentication (BasicAuth)
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.Config.in-user-context = In user context
+com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.Config.in-user-context.tooltip = Whether user's can use the API with their login credentials (user name and password). <p> With this option checked, no additional secrets must be configured for this authentication method, since authentication is done against the local password database. </p> <p> With this option checked, the API implementation has access to the authenticated user through the <code>currentUser()</code> function. </p>
 com.top_logic.service.openapi.server.authentication.http.basic.BasicAuthentication.tooltip = Authentication using HTTP <i>BasicAuth</i> mechanism.
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret = HTTP authentication (BasicAuth)
 com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSecret.tooltip = <i>HTTP secret</i> for the <i>OpenAPI</i> server.
