Ticket #28558: tl-demo: Added demo for custom authentication.

--- a/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
@@ -15,6 +15,12 @@ class.com.top_logic.demo.layout.form.demo.I18NConstants.PERMISSIONS = Berechtigu
 class.com.top_logic.demo.layout.form.demo.I18NConstants.PERMISSIONS.tooltip = Hier ein beschreibender Text über Genehmigungen.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.TECHNICAL_ADMINISTRATION = Technische Verwaltung
 class.com.top_logic.demo.layout.form.demo.I18NConstants.TECHNICAL_ADMINISTRATION.tooltip = Hier ist ein beschreibender Text über Tech.Administration. Dieser Abschnitt ist absichtlich lang gehalten. Testet das Raster.
+com.top_logic.demo.api.CustomAuthentication = Benutzerdefinierte Authentifizierung
+com.top_logic.demo.api.CustomAuthentication.Config.header = Kopfzeile
+com.top_logic.demo.api.CustomAuthentication.Config.header.tooltip = Die Kopfzeile, die das Geheimnis enthält.
+com.top_logic.demo.api.CustomAuthentication.Config.lookup-user = Benutzer nachschlagen
+com.top_logic.demo.api.CustomAuthentication.Config.lookup-user.tooltip = Eine Funktion, die nach einem Benutzer für ein bestimmtes Geheimnis sucht.
+com.top_logic.demo.api.CustomAuthentication.tooltip = Demo für einen benutzerdefinierten Authentifizierungsmechanismus für eine <i>OpenAPI-Schnittstelle</i>.
 com.top_logic.demo.chart.DemoChartComponent = Demo-Diagramm-Komponente
 com.top_logic.demo.chart.DemoChartComponent.Config.max-height = Maximale Höhe
 com.top_logic.demo.chart.DemoChartComponent.Config.max-width = Maximale Breite
