--- a/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
@@ -15,6 +15,12 @@ class.com.top_logic.demo.layout.form.demo.I18NConstants.PERMISSIONS = Permission
 class.com.top_logic.demo.layout.form.demo.I18NConstants.PERMISSIONS.tooltip = Here is a descriptive text about permissions.
 class.com.top_logic.demo.layout.form.demo.I18NConstants.TECHNICAL_ADMINISTRATION = Technical Administration
 class.com.top_logic.demo.layout.form.demo.I18NConstants.TECHNICAL_ADMINISTRATION.tooltip = Here is a descriptive text about Tech.Administration. This section is intentionally made long. Tests the grid.
+com.top_logic.demo.api.CustomAuthentication = Custom authentication
+com.top_logic.demo.api.CustomAuthentication.Config.header = Header
+com.top_logic.demo.api.CustomAuthentication.Config.header.tooltip = The header that contains the secret.
+com.top_logic.demo.api.CustomAuthentication.Config.lookup-user = Lookup user
+com.top_logic.demo.api.CustomAuthentication.Config.lookup-user.tooltip = A function looking up a user for a given secret.
+com.top_logic.demo.api.CustomAuthentication.tooltip = Demo for a custom authentication mechanism for an <i>OpenAPI</i> interface.
 com.top_logic.demo.chart.DemoChartComponent = Demo chart component
 com.top_logic.demo.chart.DemoChartComponent.Config.max-height = Maximum height
 com.top_logic.demo.chart.DemoChartComponent.Config.max-width = Maximum width
