Ticket #28561: Moved dynamic name to abstract super-class.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5650,13 +5650,13 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ORDERED.tooltip = Eine A
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Zeile
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = Ein Ablage erfolgt auf eine Zeile selbst, ohne relative Positionierung.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Handler für den Tabellenexport
+com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name = Dynamischer Download-Name
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Basisklasse für den Export von <i>Tabellendaten</i>.
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider = Konfigurierte Berechnung des Download-Namens
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider.tooltip = <i>Konfigurierte Instanz</i> <i>Download-Namensberechnung</i>.
 com.top_logic.layout.table.export.ExcelExportHandler = Excel-Export-Handler
-com.top_logic.layout.table.export.ExcelExportHandler.Config.dynamic-download-name = Dynamischer Download-Name
 com.top_logic.layout.table.export.ExcelExportHandler.tooltip = Handler für die Erstellung von Excel-Berichten aus <i>Tabellendaten</i>.
-com.top_logic.layout.table.export.ModelDownloadName = Name des heruntergeladenen Modells
+com.top_logic.layout.table.export.ModelDownloadName = Dateiname (modellbasiert)
 com.top_logic.layout.table.export.ModelDownloadName.Config.model = Modell
 com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Kanal der Komponente</i>, von dem der zu rendernde Wert abgerufen werden soll.
 com.top_logic.layout.table.export.ModelDownloadName.tooltip = Berechnung von <i>Download-Namen</i>, die Dateinamen auf der Grundlage des Modells einer Komponente erzeugen.
